--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+cart-shopee-front-dio/node_modules
+cart-shopee-node-dio/node_modules
 /.pnp
 .pnp.js
 
